more progress and fixes with z-index

--- a/src/components/content/appleMenu/AppleMenu.module.css
+++ b/src/components/content/appleMenu/AppleMenu.module.css
@@ -9,6 +9,7 @@
   border-radius: 6px;
   left: 10px;
   top: -10px;
+  z-index: 10;
 }
 
 .ul {
